<resources>
    <string name="app_name">Noti-Net</string>
    <string name="createEvent">Crear evento</string>
    <string name="createGroup">Crear grupo</string>
    <string name="listEvent">Listar eventos</string>
    <string name="titleCreateGroup">Creación de grupo</string>
    <string name="work">Agrega tarea</string>
    <string name="assignWork">Asigna un usuario a la tarea</string>
    <string name="signUp">Sign up</string>
    <string name="recommendationPassword">Your record doesn’t exist in ourdatabase.  Why don’t you signup in simple 3 steps now?</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="buttonSignUp">Signup Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="titleSignIn">Sign In</string>
    <string name="recommendationSignIn">Enter your Mobile number / Email ID to sign in for petition</string>
    <string name="buttonSingIn">Continue</string>
    <string name="signInPhone">Eg: +91 98765 XXXXX</string>
    <string name="signIn">Sign In</string>
    <string name="nameProyect">Noti-Net</string>
    <string name="group">Tareas</string>
    <string name="mygroups">Mis grupos</string>
    <string name="textNameGroup">Nombre del grupo</string>
    <string name="textIntegrants">Integrantes</string>
</resources>